--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
     />
     <meta name="theme-color" content="#000000"/>
     <title>Vue2.0 源码</title>
+     <div id="#app">
+         <div class="content">
+            主页面 {{name}}{{age}}
+         </div>
+         <p style='color:red'>
+             静态节点
+         </p>
+     </div>
 </head>
 <body>
 <div id="app"></div>
@@ -17,6 +25,7 @@
   
 <script>
      var vm=new Vue({
+         el:"#app",
          data:()=>{
              return {
                    name:'于学文',
