--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
     />
     <meta name="theme-color" content="#000000"/>
     <title>Vue2.0 源码</title>
-     <div id="#app">
-         <div class="content">
-            主页面 {{name}}{{age}}
-         </div>
-         <p style='color:red'>
-             静态节点
-         </p>
-     </div>
+     
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+    <div class="content">
+        名称：{{name}} <h5>年龄：{{age}}</h5>
+     </div>
+     <p style='color:red'>
+         静态节点
+     </p>
+</div>
 <script src="../dist/vue.js" type="text/javascript"></script>
   
 <script>
